# oss.FCL.sf.mw.opensrv

./: layers.sysdef.xml  package_definition.xml
group/: bld.inf
isolationserver/group/: bld.inf
isolationserver/install/: isolationserver.pkg
isolationserver/rom/: isoserver.iby
libtelepathy/bwins/: libtelepathyu.def
libtelepathy/group/: bld.inf  libtelepathy.mmp
libtelepathy/inc/: tp-ch-gen.h  tp-chan-gen.h  tp-chan-iface-dtmf-gen.h  tp-chan-iface-group-gen.h  tp-chan-iface-hold-gen.h  tp-chan-iface-ice-signalling-gen.h  tp-chan-iface-password-gen.h  tp-chan-iface-transfer-gen.h  tp-chan-ifaces-signal-setters.h  tp-chan-signals-marshal.h  tp-chan-type-contact-list-gen.h  tp-chan-type-room-list-gen.h  tp-chan-type-search-gen.h  tp-chan-type-streamed-media-gen.h  tp-chan-type-text-gen.h  tp-chan.h  tp-conn-gen.h  tp-conn-iface-aliasing-gen.h  tp-conn-iface-avatars-gen.h  tp-conn-iface-capabilities-gen.h  tp-conn-iface-contact-info-gen.h  tp-conn-iface-forwarding-gen.h  tp-conn-iface-presence-gen.h  tp-conn-iface-privacy-gen.h  tp-conn-iface-renaming-gen.h  tp-conn-ifaces-signal-setters.h  tp-conn-signals-marshal.h  tp-conn.h  tp-connmgr-gen.h  tp-connmgr-signals-marshal.h  tp-connmgr.h  tp-constants.h  tp-helpers.h  tp-ice-session-handler-gen.h  tp-ice-stream-handler-gen.h  tp-ifaces-signals-marshal.h  tp-interfaces.h  tp-props-iface-gen.h  tp-props-iface.h
libtelepathy/rom/: libtelepathy.iby
libtelepathy/src/: Makefile.am  Makefile.in  libtelepathy_wsd.cpp  libtelepathy_wsd_macros.h  libtelepathy_wsd_solution.h  tp-chan-ifaces-signal-setters.c  tp-chan-signals-marshal.c  tp-chan.c  tp-conn-ifaces-signal-setters.c  tp-conn-signals-marshal.c  tp-conn.c  tp-connmgr-signals-marshal.c  tp-connmgr.c  tp-helpers.c  tp-ifaces-signals-marshal.c  tp-props-iface.c
loudmouth/bwins/: loudmouthu.def
loudmouth/bwinscw/: loudmouthu.def
loudmouth/eabi/: loudmouthu.def
loudmouth/group/: bld.inf  loudmouth.mmp
loudmouth/inc/: Makefile.in  asyncns.h  config.h  gdebug.h  libloudmouth_wsd_macros.h  libloudmouth_wsd_solution.h  lm-debug.h  lm-message-queue.h  lm-parser.h  lm-sasl.h  lm-sha.h  lm-sock.h  lm_enums.h
loudmouth/install/: loudmouth.bat  loudmouth.pkg
loudmouth/rom/: loudmouth.iby
loudmouth/src/: asyncns.c  base64.c  libloudmouth_wsd.cpp  lm-connection.c  lm-debug.c  lm-error.c  lm-message-handler.c  lm-message-node.c  lm-message-queue.c  lm-message.c  lm-misc.c  lm-parser.c  lm-proxy.c  lm-sasl.c  lm-sha.c  lm-sock.c  lm-socket.c  lm-ssl-generic.c  lm-ssl-gnutls.c  lm-ssl-openssl.c  lm-utils.c
opensrv_plat/group/: bld.inf
telepathygabble/bwins/: libgabble-convenienceU.DEF
telepathygabble/data/: jabber.service  jabber.service_hw  org.freedesktop.Telepathy.ConnectionManager.gabble.service
telepathygabble/group/: bld.inf  libgabble-convenience.mmp  telepathy-gabble.mmp
(+252 files in other folders)
